First take at updateServer. Not tested yet.
